Fix highlight images not being center aligned
And fix project split content not stacking on mobile

--- a/src/assets/styles/components/highlight.scss
+++ b/src/assets/styles/components/highlight.scss
@@ -37,7 +37,6 @@
     }
     &-item {
         flex-basis: 23%;
-        width: 100%;
         margin: 1rem;
         text-align: center;
         border: 1px solid white;
